finish W03 assignment
